# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: __init__.py  app.py  entities.py  environ.py  filters.py  flash.py  html.py  url.py
page_analyzer/db/: __init__.py  connection.py
page_analyzer/db/entities/: __init__.py  url.py  url_check.py
page_analyzer/templates/: base.html  main.html  url.html  urls.html
