[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Pages analyzer"
authors = ["Igor_Aukhadeev <rumbks@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
gunicorn = "^20.1.0"
environs = "^9.5.0"
psycopg2 = "^2.9.5"
validators = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
